--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.3.0",
@@ -16,6 +18,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-architects/module-federation": "^20.0.0",
     "@angular-devkit/build-angular": "~20.3.0",
     "@angular-devkit/core": "~20.3.0",
     "@angular-devkit/schematics": "~20.3.0",
@@ -48,6 +51,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.6.1",
     "jest-util": "^29.7.0",
+    "ngx-build-plus": "^20.0.0",
     "nx": "21.6.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
